# Antigravity-Booster

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
antigravity-extension/: extension.js  package.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  check_error.txt  error_output.txt  expanded.rs  tauri.conf.json  update-dll.bat
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: antigravity-booster-helper.vsix
src-tauri/src/: history.rs  lib.rs  main.rs  migration.rs  oauth.rs  proxy.rs  quota.rs  storage.rs
src/stores/: app.ts
version-dll/: CMakeLists.txt  README.md  dllmain.cpp  fakeip.h  pch.h  proxy.cpp  proxy.h  proxy_config.json  version_forwarder.cpp
