[package]
name = "antigravity-booster"
version = "1.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antigravity_booster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = "0.4.43"
regex = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
open = "5.3.3"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
base64 = "0.22.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
webbrowser = "1.0.6"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-log = "2.8.0"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sysinfo = "0.30"
